fixed tab sizing issue on mobile breakpoint

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -147,7 +147,7 @@ button {
   }
 }
 
-@media screen and (max-width: 575px) {
+@media screen and (max-width: 675px) {
   .app-container {
     margin-top: 12rem;
   }
@@ -270,7 +270,7 @@ button {
 }
 
 .story-article:first-child {
-  margin-top: 5em;
+  margin-top: 3em;
 }
 
 // Story Tab
